--- a/project no 1/index.html
+++ b/project no 1/index.html
@@ -6,6 +6,7 @@
                <title>Document</title>
           </head>
      <body>
-       <p></p>   
+          <h1> This is my first website of over home town</h1>
+       <p>deepak bharti</p>   
      </body>
 </html>
